logger/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: logger-writer
          image: jammeri/logger:writer-1.0
          volumeMounts:
            - name: data
              mountPath: /data
        - name: logger-web
          image: jammeri/logger:web-1.1
          volumeMounts:
            - name: data
              mountPath: /data
