logger/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-svc
  namespace: pingpong
spec:
  type: ClusterIP
  selector:
    app: logger
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
